--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -6,6 +6,7 @@ build-type: Simple
 library
   hs-source-dirs: src
   build-depends: base
+               , bytestring
                , common
                , jsaddle
                , lens
