--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -8,6 +8,7 @@ library
   build-depends: base
                , bytestring
                , aeson
+               , lens-aeson
                , common
                , jsaddle
                , lens
